// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimRecord form should allow content indicators to be selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      class=\\"MuiGrid-container-3 StandardPage\\"
    >
+     <h2
+       class=\\"MuiTypography-root-100 MuiTypography-h4-115 MuiTypography-colorPrimary-130 Page-layoutTitle-2\\"
+     >
+       Claim a work
+     </h2>
      <div
        class=\\"MuiGrid-item-4 Page-layoutCard-1\\"
+     >
+       <form>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-345 MuiPaper-elevation1-348 MuiPaper-rounded-346 MuiCard-root-344 Cards-card-340 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-372\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-375\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-376\\"
+                   >
+                     You are claiming to be an author for the following work:
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-378\\"
+               >
+                 <div
+                   class=\\"publicationCitation\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-container-3\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                           style=\\"min-width: 1px;\\"
+                         >
+                           <h6
+                             class=\\"MuiTypography-root-100 MuiTypography-h6-117 PublicationCitation-citationTitle-380\\"
+                           >
+                             <a
+                               href=\\"/view/UQ:396321\\"
+                             >
+                               Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer
+                             </a>
+                           </h6>
+                         </div>
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationText-381\\"
+                         >
+                           <div
+                             class=\\"citationContent citationJournalArticle\\"
+                           >
+                             <span
+                               class=\\"citationAuthors\\"
+                             >
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Milevskiy, Michael J. G., 
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Al-Ejeh, Fares
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                  and Saunus, Jodi M.
+                               </span>
+                                
+                             </span>
+                             <span
+                               class=\\"citationDate\\"
+                             >
+                               (2016).
+                             </span>
+                             <span
+                               class=\\"citationTitle\\"
+                             >
+                                Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer.
+                             </span>
+                             <span
+                               class=\\"citationJournalName\\"
+                             >
+                                Human Molecular Genetics 
+                             </span>
+                             <span
+                               class=\\"citationVolumeNumber\\"
+                             >
+                                25 
+                             </span>
+                             <span
+                               class=\\"citationIssueNumber\\"
+                             >
+                               (15) 
+                             </span>
+                             <span
+                               class=\\"citationPageRange\\"
+                             >
+                               <span
+                                 class=\\"citationStartPage\\"
+                               >
+                                 3269
+                               </span>
+                               -
+                               <span
+                                 class=\\"citationEndPage\\"
+                               >
+                                 3283
+                               </span>
+                             </span>
+                             <span>
+                               . 
+                             </span>
+                             <a
+                               aria-label=\\"Open this DOI in an new window\\"
+                               class=\\"citationDoiLink ExternalLink-externalLink-386\\"
+                               href=\\"https://doi.org/10.1093/hmg/ddw177\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Open this DOI in an new window\\"
                              >
+                               <svg
+                                 aria-hidden=\\"true\\"
+                                 class=\\"MuiSvgIcon-root-388 ExternalLink-externalLinkIcon-387\\"
+                                 focusable=\\"false\\"
+                                 role=\\"presentation\\"
+                                 viewBox=\\"0 0 24 24\\"
+                               >
+                                 <path
+                                   d=\\"M0 0h24v24H0z\\"
+                                   fill=\\"none\\"
+                                 />
+                                 <path
+                                   d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                 />
+                               </svg>
+                               https://doi.org/10.1093/hmg/ddw177
+                             </a>
+                           </div>
+                         </div>
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationCounts-382\\"
+                         >
                            <div
                              class=\\"MuiGrid-container-3\\"
                            >
                              <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-auto-44\\"
+                             >
+                               <a
+                                 aria-label=\\"Full citation in Web of science will open in a new window\\"
+                                 class=\\"wosCitationCount CitationCountView-citationCount-398 ExternalLink-externalLink-386\\"
+                                 href=\\"http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=000393077300011&SrcAuth=uqueensland\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Web of science will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon wos large\\"
+                                 />
+                                 <span
+                                   class=\\"CitationCountView-citationCountNumber-399\\"
+                                 >
+                                   6
+                                 </span>
+                               </a>
+                               <a
+                                 aria-label=\\"Full citation in Scopus will open in a new window\\"
+                                 class=\\"scopusCitationCount CitationCountView-citationCount-398 ExternalLink-externalLink-386\\"
+                                 href=\\"http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=2-s2.0-85014391875&origin=inward\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Scopus will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon scopus large\\"
+                                 />
+                                 <span
+                                   class=\\"CitationCountView-citationCountNumber-399\\"
+                                 >
+                                   7
+                                 </span>
+                               </a>
+                               <a
+                                 aria-label=\\"Full citation in Altmetric will open in a new window\\"
+                                 class=\\"altmetricCitationCount CitationCountView-citationCount-398 ExternalLink-externalLink-386\\"
+                                 href=\\"http://www.altmetric.com/details.php?citation_id=9271343\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Altmetric will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon altmetric large\\"
+                                 />
+                                 <span
+                                   class=\\"CitationCountView-citationCountNumber-399\\"
+                                 >
+                                   2
+                                 </span>
+                               </a>
+                               <a
+                                 aria-label=\\"Full citation in Google scholar will open in a new window\\"
+                                 class=\\"googleCitationCount CitationCountView-citationCount-398 ExternalLink-externalLink-386\\"
+                                 href=\\"https://scholar.google.com/scholar?q=intitle:Long-range%20regulators%20of%20the%20lncRNA%20HOTAIR%20enhance%20its%20prognostic%20potential%20in%20breast%20cancer\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Google scholar will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon google large\\"
+                                 />
+                               </a>
+                               <span
+                                 class=\\"noOaIcon\\"
+                               />
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4\\"
+                             >
+                               <a
+                                 class=\\"CitationCounts-statsLink-397 ExternalLink-externalLink-386\\"
+                                 href=\\"https://app.library.uq.edu.au/#/authors/view/UQ:396321\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-388 ExternalLink-externalLinkIcon-387\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                   />
+                                 </svg>
+                                 View full statistics
+                               </a>
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                             />
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                   <hr
+                     class=\\"MuiDivider-root-400 PublicationCitation-divider-379\\"
+                   />
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <span
+                       class=\\"MuiTypography-root-100 MuiTypography-caption-110 MuiTypography-gutterBottom-127\\"
+                     >
+                       <span
+                         class=\\"PublicationCitation-contentIndicatorTitle-384\\"
+                       >
+                         Content Indicators:
+                       </span>
+                       Scholarship of Teaching and Learning, Protocol
+                     </span>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <span />
+           <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-345 MuiPaper-elevation1-348 MuiPaper-rounded-346 MuiCard-root-344 Cards-card-340 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-372\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-375\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-376\\"
                    >
+                     Author linking
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-378\\"
+               >
+                 <label
+                   for=\\"authorLinking\\"
+                 >
+                   We were unable to automatically detect who you are from the list of authors on this work. Please select your name from the list below: 
+                 </label>
                  <div
-             style=\\"padding: 8px;\\"
+                   class=\\"requiredField\\"
                  >
                    <div
-               class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-8-25 MuiGrid-align-items-xs-center-11 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                     class=\\"MuiGrid-container-3\\"
                    >
                      <div
-                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-                 style=\\"text-align: center;\\"
+                       class=\\"MuiGrid-item-4 WithTheme-WithWidth-AuthorLinking---infiniteContainer-418\\"
                      >
                        <div
-                   class=\\"MuiCircularProgress-root-331 MuiCircularProgress-colorPrimary-334 MuiCircularProgress-indeterminate-333\\"
-                   role=\\"progressbar\\"
-                   style=\\"width: 18px; height: 18px;\\"
+                         class=\\"\\"
+                         style=\\"height: 200px; overflow-x: hidden; overflow-y: scroll;\\"
+                       >
+                         <div>
+                           <div
+                             style=\\"width: 100%; height: 0px;\\"
+                           />
+                           <div
+                             class=\\"MuiGrid-container-3\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-437 MuiButtonBase-disabled-438 MuiButton-root-510 MuiButton-text-512 MuiButton-flat-515 MuiButton-disabled-530 MuiButton-fullWidth-535 AuthorItem-buttonBase-537\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-511\\"
                                      >
                                        <svg
-                     class=\\"MuiCircularProgress-svg-336\\"
-                     viewBox=\\"22 22 44 44\\"
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-388 AuthorItem-authorLinkIcon-536\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
+                                           fill=\\"none\\"
+                                         />
+                                         <path
+                                           d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
+                                         />
+                                       </svg>
+                                       Milevskiy, Michael J. G.
+                                     </span>
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-538\\"
+                                   >
+                                     First  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-437 MuiButton-root-510 MuiButton-text-512 MuiButton-flat-515 MuiButton-fullWidth-535 AuthorItem-buttonBase-537\\"
+                                     tabindex=\\"0\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-511\\"
+                                     >
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-388 MuiSvgIcon-colorSecondary-390 AuthorItem-authorLinkIcon-536\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
                                        >
-                     <circle
-                       class=\\"MuiCircularProgress-circle-337 MuiCircularProgress-circleIndeterminate-339\\"
-                       cx=\\"44\\"
-                       cy=\\"44\\"
+                                         <path
+                                           d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
+                                         />
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
                                            fill=\\"none\\"
-                       r=\\"21\\"
-                       stroke-width=\\"2\\"
                                          />
                                        </svg>
+                                       Al-Ejeh, Fares
+                                     </span>
+                                     <span
+                                       class=\\"MuiTouchRipple-root-440\\"
+                                     />
+                                   </button>
                                  </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-538\\"
+                                   >
+                                     Second  listed author
+                                   </span>
                                  </div>
+                               </div>
+                             </div>
                              <div
-                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-                 style=\\"text-align: center;\\"
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-437 MuiButtonBase-disabled-438 MuiButton-root-510 MuiButton-text-512 MuiButton-flat-515 MuiButton-disabled-530 MuiButton-fullWidth-535 AuthorItem-buttonBase-537\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
+                                     type=\\"button\\"
                                    >
                                      <span
-                   class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorPrimary-130\\"
-                   style=\\"font-size: 1.33rem;\\"
+                                       class=\\"MuiButton-label-511\\"
+                                     >
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-388 AuthorItem-authorLinkIcon-536\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
                                        >
-                   Loading record to claim
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
+                                           fill=\\"none\\"
+                                         />
+                                         <path
+                                           d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
+                                         />
+                                       </svg>
+                                       Saunus, Jodi M.
+                                     </span>
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-538\\"
+                                   >
+                                     Third  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div />
+                           <div
+                             style=\\"width: 100%; height: 0px;\\"
+                           />
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-345 MuiPaper-elevation1-348 MuiPaper-rounded-346 MuiCard-root-344 Cards-card-340 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-372\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-375\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-376\\"
+                   >
+                     Optional: Content Indicators
+                   </h3>
+                 </div>
+                 <div
+                   class=\\"MuiCardHeader-action-374\\"
+                 >
+                   <button
+                     class=\\"MuiButtonBase-root-437 MuiIconButton-root-431\\"
+                     tabindex=\\"0\\"
+                     title=\\"Click for more information\\"
+                     type=\\"button\\"
+                   >
+                     <span
+                       class=\\"MuiIconButton-label-436\\"
+                     >
+                       <svg
+                         aria-hidden=\\"false\\"
+                         class=\\"MuiSvgIcon-root-388 HelpIcon-helpIcon-423\\"
+                         focusable=\\"false\\"
+                         role=\\"img\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z\\"
+                         />
+                         <title>
+                           Click for more information
+                         </title>
+                       </svg>
+                     </span>
+                     <span
+                       class=\\"MuiTouchRipple-root-440\\"
+                     />
+                   </button>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-378\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <p
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108\\"
+                     >
+                       You can select multiple (of 3 available) content indicators to add more information about your work, but you cannot remove indicators already selected. To amend existing information, suggest a correction below.
+                     </p>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-448 MuiFormControl-fullWidth-451\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-459 MuiFormLabel-filled-463 MuiInputLabel-root-452 MuiInputLabel-formControl-453 MuiInputLabel-animated-456 MuiInputLabel-shrink-455\\"
+                         data-shrink=\\"true\\"
+                         id=\\"Please select relevant indicator(s).-label\\"
+                       >
+                         Please select relevant indicator(s).
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-486 MuiInput-root-473 MuiInput-underline-477 MuiInputBase-formControl-487 MuiInput-formControl-474\\"
+                       >
+                         <div
+                           class=\\"MuiSelect-root-466\\"
+                         >
+                           <div
+                             aria-haspopup=\\"true\\"
+                             aria-pressed=\\"false\\"
+                             class=\\"MuiSelect-select-467 MuiSelect-selectMenu-470 MuiInputBase-input-496 MuiInput-input-481\\"
+                             id=\\"content-indicators\\"
+                             role=\\"button\\"
+                             tabindex=\\"0\\"
+                           >
+                             Scholarship of Teaching and Learning, Protocol
+                           </div>
+                           <input
+                             style=\\"border: 1px solid red;\\"
+                             type=\\"hidden\\"
+                             value=\\"454079,454080\\"
+                           />
+                           <svg
+                             aria-hidden=\\"true\\"
+                             class=\\"MuiSvgIcon-root-388 MuiSelect-icon-472\\"
+                             focusable=\\"false\\"
+                             role=\\"presentation\\"
+                             viewBox=\\"0 0 24 24\\"
+                           >
+                             <path
+                               d=\\"M7 10l5 5 5-5z\\"
+                             />
+                           </svg>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-345 MuiPaper-elevation1-348 MuiPaper-rounded-346 MuiCard-root-344 Cards-card-340 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-372\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-375\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-376\\"
+                   >
+                     Optional: Suggest changes or add links to this work
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-378\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-448 MuiFormControl-fullWidth-451\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-459 MuiInputLabel-root-452 MuiInputLabel-formControl-453 MuiInputLabel-animated-456\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Typeedits/changes/commentshere\\"
+                         id=\\"Typeedits/changes/commentshere-label\\"
+                       >
+                         Type edits/changes/comments here
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-486 MuiInput-root-473 MuiInput-underline-477 MuiInputBase-fullWidth-495 MuiInput-fullWidth-480 MuiInputBase-formControl-487 MuiInput-formControl-474 MuiInputBase-multiline-494 MuiInput-multiline-479\\"
+                       >
+                         <textarea
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Type edits/changes/comments here\\"
+                           aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
+                           class=\\"MuiInputBase-input-496 MuiInput-input-481 MuiInputBase-inputMultiline-498 MuiInput-inputMultiline-483\\"
+                           id=\\"Typeedits/changes/commentshere\\"
+                           label=\\"Type edits/changes/comments here\\"
+                           name=\\"comments\\"
+                           rows=\\"3\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-448 MuiFormControl-fullWidth-451\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-459 MuiInputLabel-root-452 MuiInputLabel-formControl-453 MuiInputLabel-animated-456\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Link(URL)\\"
+                         id=\\"Link(URL)-label\\"
+                       >
+                         Link (URL)
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-486 MuiInput-root-473 MuiInput-underline-477 MuiInputBase-fullWidth-495 MuiInput-fullWidth-480 MuiInputBase-formControl-487 MuiInput-formControl-474\\"
+                       >
+                         <input
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Link (URL)\\"
+                           aria-labelledby=\\"Link(URL)-label\\"
+                           class=\\"MuiInputBase-input-496 MuiInput-input-481\\"
+                           id=\\"Link(URL)\\"
+                           label=\\"Link (URL)\\"
+                           name=\\"rek_link\\"
+                           type=\\"text\\"
+                           value=\\"\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-345 MuiPaper-elevation1-348 MuiPaper-rounded-346 MuiCard-root-344 Cards-card-340 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-372\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-375\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-376\\"
+                   >
+                     Optional: Upload additional files
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-378\\"
+               >
+                 <p
+                   class=\\"MuiTypography-root-100 MuiTypography-body2-108 MuiTypography-gutterBottom-127\\"
+                 >
+                   You may add up to 10 files (max 8GB each)
+                 </p>
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       id=\\"FileUploadDropZone\\"
+                       tabindex=\\"0\\"
+                     >
+                       <div
+                         aria-disabled=\\"false\\"
+                         class=\\"\\"
+                         style=\\"position: relative; padding: 0px;\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3 FileUploadDropzoneStaticContent-dropzone-506\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <p
+                               class=\\"MuiTypography-root-100 MuiTypography-body2-108 FileUploadDropzoneStaticContent-heading-507\\"
+                             >
+                               File upload restrictions
+                             </p>
+                             <div>
+                               Please ensure your files:
+                               <ul>
+                                 <li>
+                                   begin with a letter and are less than 45 characters long
+                                 </li>
+                                 <li>
+                                   contain only upper and lowercase alphanumeric characters, and underscores
+                                 </li>
+                                 <li>
+                                   have only a single period which precedes the file extension: e.g. “.pdf”, “.mov”, “.tiff”, “.wav” etc.
+                                 </li>
+                                 <li>
+                                   two periods are allowed for multipart zip files.  Allowed formats for part description are: e.g. “.001 ... .999”, “.r01 ... .r999” and “.part1 ... .part999”
+                                 </li>
+                                 <li>
+                                   are uploaded individually and not inside a folder
+                                 </li>
+                               </ul>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-3 MuiGrid-direction-xs-column-6 MuiGrid-align-items-xs-center-11 MuiGrid-justify-xs-center-20 FileUploadDropzoneStaticContent-instructions-508\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-388 FileUploadDropzoneStaticContent-cloudIcon-509\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z\\"
+                                   />
+                                 </svg>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <p>
+                                   Click here to select files, or drag files into this area to upload
+                                 </p>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <input
+                           aria-label=\\"Upload files\\"
+                           autocomplete=\\"off\\"
+                           id=\\"Uploader\\"
+                           multiple=\\"\\"
+                           style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
+                           type=\\"file\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-547 Alert-common-539\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-540 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-388 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-541 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             You are required to select a author from the list, then confirm that it is you
+                           </li>
+                         </ul>
                        </span>
+                     </div>
+                   </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+           />
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-437 MuiButton-root-510 MuiButton-contained-521 MuiButton-raised-524 MuiButton-fullWidth-535\\"
+               tabindex=\\"0\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-511\\"
+               >
+                 Cancel this claim
+               </span>
+               <span
+                 class=\\"MuiTouchRipple-root-440\\"
+               />
+             </button>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-437 MuiButtonBase-disabled-438 MuiButton-root-510 MuiButton-contained-521 MuiButton-containedPrimary-522 MuiButton-raised-524 MuiButton-raisedPrimary-525 MuiButton-disabled-530 MuiButton-fullWidth-535\\"
+               disabled=\\"\\"
+               id=\\"claimSubmit\\"
+               tabindex=\\"-1\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-511\\"
+               >
+                 Claim this work
+               </span>
+             </button>
+           </div>
+         </div>
+       </form>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`ClaimRecord form should allow content indicators to be selected 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -599,11 +599,12 @@
                          <div
                            class=\\"MuiSelect-root-466\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-467 MuiSelect-selectMenu-470 MuiInputBase-input-496 MuiInput-input-481\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >"
`;

exports[`ClaimRecord form should allow content indicators to be selected 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -301,11 +301,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <span />
+           <div />
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
            >
              <div
                class=\\"MuiPaper-root-345 MuiPaper-elevation1-348 MuiPaper-rounded-346 MuiCard-root-344 Cards-card-340 StandardCard\\"
@@ -606,16 +606,16 @@
                              class=\\"MuiSelect-select-467 MuiSelect-selectMenu-470 MuiInputBase-input-496 MuiInput-input-481\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol
+                             Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080\\"
+                             value=\\"454079,454080,454081\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-388 MuiSelect-icon-472\\"
                              focusable=\\"false\\""
`;

exports[`ClaimRecord form should allow content indicators to be selected 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -606,16 +606,16 @@
                              class=\\"MuiSelect-select-467 MuiSelect-selectMenu-470 MuiInputBase-input-496 MuiInput-input-481\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol, Case Study
+                             Scholarship of Teaching and Learning, Protocol
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080,454081\\"
+                             value=\\"454079,454080\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-388 MuiSelect-icon-472\\"
                              focusable=\\"false\\""
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -416,17 +416,17 @@
                                      <span
                                        class=\\"MuiButton-label-1082\\"
                                      >
                                        <svg
                                          aria-hidden=\\"true\\"
-                                         class=\\"MuiSvgIcon-root-959 MuiSvgIcon-colorSecondary-961 AuthorItem-authorLinkIcon-1107\\"
+                                         class=\\"MuiSvgIcon-root-959 MuiSvgIcon-colorPrimary-960 AuthorItem-authorLinkIcon-1107\\"
                                          focusable=\\"false\\"
                                          role=\\"presentation\\"
                                          viewBox=\\"0 0 24 24\\"
                                        >
                                          <path
-                                           d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
+                                           d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
                                          />
                                          <path
                                            d=\\"M0 0h24v24H0z\\"
                                            fill=\\"none\\"
                                          />
@@ -504,10 +504,52 @@
                            />
                          </div>
                        </div>
                      </div>
                    </div>
+                   <label
+                     class=\\"MuiFormControlLabel-root-1143 WithTheme-WithWidth-AuthorLinking---root-990\\"
+                   >
+                     <span
+                       class=\\"MuiButtonBase-root-1008 MuiIconButton-root-1002 MuiSwitchBase-root-1153 MuiCheckbox-root-1147 WithTheme-WithWidth-AuthorLinking---checkboxRoot-992 MuiCheckbox-colorSecondary-1152 MuiSwitchBase-checked-1154 MuiCheckbox-checked-1148 WithTheme-WithWidth-AuthorLinking---checkboxChecked-993\\"
+                     >
+                       <span
+                         class=\\"MuiIconButton-label-1007\\"
+                       >
+                         <svg
+                           aria-hidden=\\"true\\"
+                           class=\\"MuiSvgIcon-root-959\\"
+                           focusable=\\"false\\"
+                           role=\\"presentation\\"
+                           viewBox=\\"0 0 24 24\\"
+                         >
+                           <path
+                             d=\\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\"
+                           />
+                         </svg>
+                         <input
+                           class=\\"MuiSwitchBase-input-1156\\"
+                           data-indeterminate=\\"false\\"
+                           id=\\"authorAcceptDeclaration\\"
+                           type=\\"checkbox\\"
+                           value=\\"\\"
+                         />
+                       </span>
+                       <span
+                         class=\\"MuiTouchRipple-root-1011\\"
+                       />
+                     </span>
+                     <span
+                       class=\\"MuiTypography-root-671 MuiTypography-body2-679 MuiFormControlLabel-label-1146\\"
+                     >
+                       <p
+                         class=\\"MuiTypography-root-671 WithTheme-WithWidth-AuthorLinking---label-991 MuiTypography-body2-679 MuiTypography-colorSecondary-702\\"
+                       >
+                         I confirm and understand that I am claiming this work under the above name, and confirm this is me
+                       </p>
+                     </span>
+                   </label>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -846,66 +888,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div
-             class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614\\"
-           >
-             <div
-               class=\\"Alert\\"
-               style=\\"padding: 12px;\\"
-             >
-               <div
-                 class=\\"MuiGrid-container-574 MuiGrid-spacing-xs-24-598 MuiGrid-align-items-xs-flex-start-583 MuiGrid-align-content-xs-center-586 MuiGrid-justify-xs-center-591 Alert-warning-1118 Alert-common-1110\\"
-               >
-                 <div
-                   class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614 MuiGrid-grid-sm-true-616\\"
-                 >
-                   <div
-                     class=\\"MuiGrid-container-574 MuiGrid-align-items-xs-flex-start-583 MuiGrid-align-content-xs-center-586 MuiGrid-justify-xs-center-591\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-575 Alert-icon-1111 alert-icon\\"
-                     >
-                       <svg
-                         aria-hidden=\\"true\\"
-                         class=\\"MuiSvgIcon-root-959 icon\\"
-                         focusable=\\"false\\"
-                         role=\\"presentation\\"
-                         viewBox=\\"0 0 24 24\\"
-                       >
-                         <path
-                           d=\\"M0 0h24v24H0z\\"
-                           fill=\\"none\\"
-                         />
-                         <path
-                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
-                         />
-                       </svg>
-                     </div>
-                     <div
-                       class=\\"MuiGrid-item-575 MuiGrid-grid-xs-true-602 Alert-text-1112 alert-text\\"
-                     >
-                       <b>
-                         Validation - 
-                       </b>
-                       <span>
-                         Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul>
-                           <li>
-                             You are required to select a author from the list, then confirm that it is you
-                           </li>
-                         </ul>
-                       </span>
-                     </div>
-                   </div>
          </div>
-               </div>
-             </div>
-           </div>
-         </div>
          <div
            class=\\"MuiGrid-container-574 MuiGrid-spacing-xs-24-598\\"
          >
            <div
              class=\\"MuiGrid-item-575 MuiGrid-grid-xs-true-602\\"
@@ -930,21 +917,23 @@
            </div>
            <div
              class=\\"MuiGrid-item-575\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-containedPrimary-1093 MuiButton-raised-1095 MuiButton-raisedPrimary-1096 MuiButton-disabled-1101 MuiButton-fullWidth-1106\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1008 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-containedPrimary-1093 MuiButton-raised-1095 MuiButton-raisedPrimary-1096 MuiButton-fullWidth-1106\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1082\\"
                >
                  Claim this work
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1011\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -407,12 +407,13 @@
                                >
                                  <div
                                    class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614\\"
                                  >
                                    <button
-                                     class=\\"MuiButtonBase-root-1008 MuiButton-root-1081 MuiButton-text-1083 MuiButton-flat-1086 MuiButton-fullWidth-1106 AuthorItem-buttonBase-1108\\"
-                                     tabindex=\\"0\\"
+                                     class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiButton-root-1081 MuiButton-text-1083 MuiButton-flat-1086 MuiButton-disabled-1101 MuiButton-fullWidth-1106 AuthorItem-buttonBase-1108\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
                                      type=\\"button\\"
                                    >
                                      <span
                                        class=\\"MuiButton-label-1082\\"
                                      >
@@ -431,13 +432,10 @@
                                            fill=\\"none\\"
                                          />
                                        </svg>
                                        Al-Ejeh, Fares
                                      </span>
-                                     <span
-                                       class=\\"MuiTouchRipple-root-1011\\"
-                                     />
                                    </button>
                                  </div>
                                  <div
                                    class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614\\"
                                  >
@@ -505,14 +503,15 @@
                          </div>
                        </div>
                      </div>
                    </div>
                    <label
-                     class=\\"MuiFormControlLabel-root-1143 WithTheme-WithWidth-AuthorLinking---root-990\\"
+                     class=\\"MuiFormControlLabel-root-1143 WithTheme-WithWidth-AuthorLinking---root-990 MuiFormControlLabel-disabled-1145\\"
                    >
                      <span
-                       class=\\"MuiButtonBase-root-1008 MuiIconButton-root-1002 MuiSwitchBase-root-1153 MuiCheckbox-root-1147 WithTheme-WithWidth-AuthorLinking---checkboxRoot-992 MuiCheckbox-colorSecondary-1152 MuiSwitchBase-checked-1154 MuiCheckbox-checked-1148 WithTheme-WithWidth-AuthorLinking---checkboxChecked-993\\"
+                       class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiIconButton-root-1002 MuiIconButton-disabled-1006 MuiSwitchBase-root-1153 MuiCheckbox-root-1147 WithTheme-WithWidth-AuthorLinking---checkboxRoot-992 MuiCheckbox-colorSecondary-1152 MuiSwitchBase-checked-1154 MuiCheckbox-checked-1148 WithTheme-WithWidth-AuthorLinking---checkboxChecked-993 MuiSwitchBase-disabled-1155 MuiCheckbox-disabled-1149\\"
+                       tabindex=\\"-1\\"
                      >
                        <span
                          class=\\"MuiIconButton-label-1007\\"
                        >
                          <svg
@@ -527,21 +526,19 @@
                            />
                          </svg>
                          <input
                            class=\\"MuiSwitchBase-input-1156\\"
                            data-indeterminate=\\"false\\"
+                           disabled=\\"\\"
                            id=\\"authorAcceptDeclaration\\"
                            type=\\"checkbox\\"
                            value=\\"\\"
                          />
                        </span>
-                       <span
-                         class=\\"MuiTouchRipple-root-1011\\"
-                       />
                      </span>
                      <span
-                       class=\\"MuiTypography-root-671 MuiTypography-body2-679 MuiFormControlLabel-label-1146\\"
+                       class=\\"MuiTypography-root-671 MuiTypography-body2-679 MuiFormControlLabel-label-1146 MuiFormControlLabel-disabled-1145\\"
                      >
                        <p
                          class=\\"MuiTypography-root-671 WithTheme-WithWidth-AuthorLinking---label-991 MuiTypography-body2-679 MuiTypography-colorSecondary-702\\"
                        >
                          I confirm and understand that I am claiming this work under the above name, and confirm this is me
@@ -634,23 +631,22 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-formControl-1058 MuiInput-formControl-1045\\"
+                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-disabled-1060 MuiInput-disabled-1047 MuiInputBase-formControl-1058 MuiInput-formControl-1045\\"
                        >
                          <div
                            class=\\"MuiSelect-root-1037\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-1038 MuiSelect-selectMenu-1041 MuiInputBase-input-1067 MuiInput-input-1052\\"
+                             class=\\"MuiSelect-select-1038 MuiSelect-selectMenu-1041 MuiSelect-disabled-1042 MuiInputBase-input-1067 MuiInput-input-1052 MuiInputBase-disabled-1060 MuiInput-disabled-1047\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
-                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -706,25 +702,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1019 MuiFormControl-fullWidth-1022\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1030 MuiInputLabel-root-1023 MuiInputLabel-formControl-1024 MuiInputLabel-animated-1027\\"
+                         class=\\"MuiFormLabel-root-1030 MuiFormLabel-disabled-1032 MuiInputLabel-root-1023 MuiInputLabel-formControl-1024 MuiInputLabel-animated-1027\\"
                          data-shrink=\\"false\\"
                          for=\\"Typeedits/changes/commentshere\\"
                          id=\\"Typeedits/changes/commentshere-label\\"
                        >
                          Type edits/changes/comments here
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-fullWidth-1066 MuiInput-fullWidth-1051 MuiInputBase-formControl-1058 MuiInput-formControl-1045 MuiInputBase-multiline-1065 MuiInput-multiline-1050\\"
+                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-disabled-1060 MuiInput-disabled-1047 MuiInputBase-fullWidth-1066 MuiInput-fullWidth-1051 MuiInputBase-formControl-1058 MuiInput-formControl-1045 MuiInputBase-multiline-1065 MuiInput-multiline-1050\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Type edits/changes/comments here\\"
                            aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
-                           class=\\"MuiInputBase-input-1067 MuiInput-input-1052 MuiInputBase-inputMultiline-1069 MuiInput-inputMultiline-1054\\"
+                           class=\\"MuiInputBase-input-1067 MuiInput-input-1052 MuiInputBase-disabled-1060 MuiInput-disabled-1047 MuiInputBase-inputMultiline-1069 MuiInput-inputMultiline-1054\\"
+                           disabled=\\"\\"
                            id=\\"Typeedits/changes/commentshere\\"
                            label=\\"Type edits/changes/comments here\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -736,25 +733,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1019 MuiFormControl-fullWidth-1022\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1030 MuiInputLabel-root-1023 MuiInputLabel-formControl-1024 MuiInputLabel-animated-1027\\"
+                         class=\\"MuiFormLabel-root-1030 MuiFormLabel-disabled-1032 MuiInputLabel-root-1023 MuiInputLabel-formControl-1024 MuiInputLabel-animated-1027\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-fullWidth-1066 MuiInput-fullWidth-1051 MuiInputBase-formControl-1058 MuiInput-formControl-1045\\"
+                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-disabled-1060 MuiInput-disabled-1047 MuiInputBase-fullWidth-1066 MuiInput-fullWidth-1051 MuiInputBase-formControl-1058 MuiInput-formControl-1045\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-1067 MuiInput-input-1052\\"
+                           class=\\"MuiInputBase-input-1067 MuiInput-input-1052 MuiInputBase-disabled-1060 MuiInput-disabled-1047\\"
+                           disabled=\\"\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -802,11 +800,11 @@
                      <div
                        id=\\"FileUploadDropZone\\"
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"false\\"
+                         aria-disabled=\\"true\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-574 FileUploadDropzoneStaticContent-dropzone-1077\\"
@@ -876,10 +874,11 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
+                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -888,52 +887,100 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-574 MuiGrid-spacing-xs-24-598 MuiGrid-align-items-xs-flex-start-583 MuiGrid-align-content-xs-center-586 MuiGrid-justify-xs-center-591 Alert-info_outline-1169 Alert-common-1157\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614 MuiGrid-grid-sm-true-616\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-574 MuiGrid-align-items-xs-flex-start-583 MuiGrid-align-content-xs-center-586 MuiGrid-justify-xs-center-591\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-575 Alert-icon-1158 alert-icon\\"
+                     >
+                       <div
+                         class=\\"MuiCircularProgress-root-1171 MuiCircularProgress-colorPrimary-1174 MuiCircularProgress-indeterminate-1173 spinner\\"
+                         role=\\"progressbar\\"
+                         style=\\"width: 38px; height: 38px;\\"
+                       >
+                         <svg
+                           class=\\"MuiCircularProgress-svg-1176\\"
+                           viewBox=\\"22 22 44 44\\"
+                         >
+                           <circle
+                             class=\\"MuiCircularProgress-circle-1177 MuiCircularProgress-circleIndeterminate-1179\\"
+                             cx=\\"44\\"
+                             cy=\\"44\\"
+                             fill=\\"none\\"
+                             r=\\"20.5\\"
+                             stroke-width=\\"3\\"
+                           />
+                         </svg>
+                       </div>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-575 MuiGrid-grid-xs-true-602 Alert-text-1159 alert-text\\"
+                     >
+                       <b>
+                         Saving - 
+                       </b>
+                       Claim publication is being processed.
+                     </div>
+                   </div>
                  </div>
+               </div>
+             </div>
+           </div>
+         </div>
          <div
            class=\\"MuiGrid-container-574 MuiGrid-spacing-xs-24-598\\"
          >
            <div
              class=\\"MuiGrid-item-575 MuiGrid-grid-xs-true-602\\"
            />
            <div
              class=\\"MuiGrid-item-575\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1008 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-raised-1095 MuiButton-fullWidth-1106\\"
-               tabindex=\\"0\\"
+               class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-raised-1095 MuiButton-disabled-1101 MuiButton-fullWidth-1106\\"
+               disabled=\\"\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1082\\"
                >
                  Cancel this claim
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1011\\"
-               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-575\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1008 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-containedPrimary-1093 MuiButton-raised-1095 MuiButton-raisedPrimary-1096 MuiButton-fullWidth-1106\\"
+               class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-containedPrimary-1093 MuiButton-raised-1095 MuiButton-raisedPrimary-1096 MuiButton-disabled-1101 MuiButton-fullWidth-1106\\"
+               disabled=\\"\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1082\\"
                >
                  Claim this work
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1011\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -301,11 +301,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div />
+           <span />
            <div
              class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614\\"
            >
              <div
                class=\\"MuiPaper-root-916 MuiPaper-elevation1-919 MuiPaper-rounded-917 MuiCard-root-915 Cards-card-911 StandardCard\\"
@@ -407,13 +407,12 @@
                                >
                                  <div
                                    class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614\\"
                                  >
                                    <button
-                                     class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiButton-root-1081 MuiButton-text-1083 MuiButton-flat-1086 MuiButton-disabled-1101 MuiButton-fullWidth-1106 AuthorItem-buttonBase-1108\\"
-                                     disabled=\\"\\"
-                                     tabindex=\\"-1\\"
+                                     class=\\"MuiButtonBase-root-1008 MuiButton-root-1081 MuiButton-text-1083 MuiButton-flat-1086 MuiButton-fullWidth-1106 AuthorItem-buttonBase-1108\\"
+                                     tabindex=\\"0\\"
                                      type=\\"button\\"
                                    >
                                      <span
                                        class=\\"MuiButton-label-1082\\"
                                      >
@@ -432,10 +431,13 @@
                                            fill=\\"none\\"
                                          />
                                        </svg>
                                        Al-Ejeh, Fares
                                      </span>
+                                     <span
+                                       class=\\"MuiTouchRipple-root-1011\\"
+                                     />
                                    </button>
                                  </div>
                                  <div
                                    class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614\\"
                                  >
@@ -503,15 +505,14 @@
                          </div>
                        </div>
                      </div>
                    </div>
                    <label
-                     class=\\"MuiFormControlLabel-root-1143 WithTheme-WithWidth-AuthorLinking---root-990 MuiFormControlLabel-disabled-1145\\"
+                     class=\\"MuiFormControlLabel-root-1143 WithTheme-WithWidth-AuthorLinking---root-990\\"
                    >
                      <span
-                       class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiIconButton-root-1002 MuiIconButton-disabled-1006 MuiSwitchBase-root-1153 MuiCheckbox-root-1147 WithTheme-WithWidth-AuthorLinking---checkboxRoot-992 MuiCheckbox-colorSecondary-1152 MuiSwitchBase-checked-1154 MuiCheckbox-checked-1148 WithTheme-WithWidth-AuthorLinking---checkboxChecked-993 MuiSwitchBase-disabled-1155 MuiCheckbox-disabled-1149\\"
-                       tabindex=\\"-1\\"
+                       class=\\"MuiButtonBase-root-1008 MuiIconButton-root-1002 MuiSwitchBase-root-1153 MuiCheckbox-root-1147 WithTheme-WithWidth-AuthorLinking---checkboxRoot-992 MuiCheckbox-colorSecondary-1152 MuiSwitchBase-checked-1154 MuiCheckbox-checked-1148 WithTheme-WithWidth-AuthorLinking---checkboxChecked-993\\"
                      >
                        <span
                          class=\\"MuiIconButton-label-1007\\"
                        >
                          <svg
@@ -526,19 +527,21 @@
                            />
                          </svg>
                          <input
                            class=\\"MuiSwitchBase-input-1156\\"
                            data-indeterminate=\\"false\\"
-                           disabled=\\"\\"
                            id=\\"authorAcceptDeclaration\\"
                            type=\\"checkbox\\"
                            value=\\"\\"
                          />
                        </span>
+                       <span
+                         class=\\"MuiTouchRipple-root-1011\\"
+                       />
                      </span>
                      <span
-                       class=\\"MuiTypography-root-671 MuiTypography-body2-679 MuiFormControlLabel-label-1146 MuiFormControlLabel-disabled-1145\\"
+                       class=\\"MuiTypography-root-671 MuiTypography-body2-679 MuiFormControlLabel-label-1146\\"
                      >
                        <p
                          class=\\"MuiTypography-root-671 WithTheme-WithWidth-AuthorLinking---label-991 MuiTypography-body2-679 MuiTypography-colorSecondary-702\\"
                        >
                          I confirm and understand that I am claiming this work under the above name, and confirm this is me
@@ -631,22 +634,23 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-disabled-1060 MuiInput-disabled-1047 MuiInputBase-formControl-1058 MuiInput-formControl-1045\\"
+                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-formControl-1058 MuiInput-formControl-1045\\"
                        >
                          <div
                            class=\\"MuiSelect-root-1037\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-1038 MuiSelect-selectMenu-1041 MuiSelect-disabled-1042 MuiInputBase-input-1067 MuiInput-input-1052 MuiInputBase-disabled-1060 MuiInput-disabled-1047\\"
+                             class=\\"MuiSelect-select-1038 MuiSelect-selectMenu-1041 MuiInputBase-input-1067 MuiInput-input-1052\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
+                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -702,26 +706,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1019 MuiFormControl-fullWidth-1022\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1030 MuiFormLabel-disabled-1032 MuiInputLabel-root-1023 MuiInputLabel-formControl-1024 MuiInputLabel-animated-1027\\"
+                         class=\\"MuiFormLabel-root-1030 MuiInputLabel-root-1023 MuiInputLabel-formControl-1024 MuiInputLabel-animated-1027\\"
                          data-shrink=\\"false\\"
                          for=\\"Typeedits/changes/commentshere\\"
                          id=\\"Typeedits/changes/commentshere-label\\"
                        >
                          Type edits/changes/comments here
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-disabled-1060 MuiInput-disabled-1047 MuiInputBase-fullWidth-1066 MuiInput-fullWidth-1051 MuiInputBase-formControl-1058 MuiInput-formControl-1045 MuiInputBase-multiline-1065 MuiInput-multiline-1050\\"
+                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-fullWidth-1066 MuiInput-fullWidth-1051 MuiInputBase-formControl-1058 MuiInput-formControl-1045 MuiInputBase-multiline-1065 MuiInput-multiline-1050\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Type edits/changes/comments here\\"
                            aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
-                           class=\\"MuiInputBase-input-1067 MuiInput-input-1052 MuiInputBase-disabled-1060 MuiInput-disabled-1047 MuiInputBase-inputMultiline-1069 MuiInput-inputMultiline-1054\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-1067 MuiInput-input-1052 MuiInputBase-inputMultiline-1069 MuiInput-inputMultiline-1054\\"
                            id=\\"Typeedits/changes/commentshere\\"
                            label=\\"Type edits/changes/comments here\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -733,26 +736,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1019 MuiFormControl-fullWidth-1022\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1030 MuiFormLabel-disabled-1032 MuiInputLabel-root-1023 MuiInputLabel-formControl-1024 MuiInputLabel-animated-1027\\"
+                         class=\\"MuiFormLabel-root-1030 MuiInputLabel-root-1023 MuiInputLabel-formControl-1024 MuiInputLabel-animated-1027\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-disabled-1060 MuiInput-disabled-1047 MuiInputBase-fullWidth-1066 MuiInput-fullWidth-1051 MuiInputBase-formControl-1058 MuiInput-formControl-1045\\"
+                         class=\\"MuiInputBase-root-1057 MuiInput-root-1044 MuiInput-underline-1048 MuiInputBase-fullWidth-1066 MuiInput-fullWidth-1051 MuiInputBase-formControl-1058 MuiInput-formControl-1045\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-1067 MuiInput-input-1052 MuiInputBase-disabled-1060 MuiInput-disabled-1047\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-1067 MuiInput-input-1052\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -800,11 +802,11 @@
                      <div
                        id=\\"FileUploadDropZone\\"
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"true\\"
+                         aria-disabled=\\"false\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-574 FileUploadDropzoneStaticContent-dropzone-1077\\"
@@ -874,11 +876,10 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
-                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -895,48 +896,44 @@
              <div
                class=\\"Alert\\"
                style=\\"padding: 12px;\\"
              >
                <div
-                 class=\\"MuiGrid-container-574 MuiGrid-spacing-xs-24-598 MuiGrid-align-items-xs-flex-start-583 MuiGrid-align-content-xs-center-586 MuiGrid-justify-xs-center-591 Alert-info_outline-1169 Alert-common-1157\\"
+                 class=\\"MuiGrid-container-574 MuiGrid-spacing-xs-24-598 MuiGrid-align-items-xs-flex-start-583 MuiGrid-align-content-xs-center-586 MuiGrid-justify-xs-center-591 Alert-done-1193 Alert-common-1180\\"
                >
                  <div
                    class=\\"MuiGrid-item-575 MuiGrid-grid-xs-12-614 MuiGrid-grid-sm-true-616\\"
                  >
                    <div
                      class=\\"MuiGrid-container-574 MuiGrid-align-items-xs-flex-start-583 MuiGrid-align-content-xs-center-586 MuiGrid-justify-xs-center-591\\"
                    >
                      <div
-                       class=\\"MuiGrid-item-575 Alert-icon-1158 alert-icon\\"
+                       class=\\"MuiGrid-item-575 Alert-icon-1181 alert-icon\\"
                      >
-                       <div
-                         class=\\"MuiCircularProgress-root-1171 MuiCircularProgress-colorPrimary-1174 MuiCircularProgress-indeterminate-1173 spinner\\"
-                         role=\\"progressbar\\"
-                         style=\\"width: 38px; height: 38px;\\"
-                       >
                        <svg
-                           class=\\"MuiCircularProgress-svg-1176\\"
-                           viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-959 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-                           <circle
-                             class=\\"MuiCircularProgress-circle-1177 MuiCircularProgress-circleIndeterminate-1179\\"
-                             cx=\\"44\\"
-                             cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-                             r=\\"20.5\\"
-                             stroke-width=\\"3\\"
+                         />
+                         <path
+                           d=\\"M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z\\"
                          />
                        </svg>
-                       </div>
                      </div>
                      <div
-                       class=\\"MuiGrid-item-575 MuiGrid-grid-xs-true-602 Alert-text-1159 alert-text\\"
+                       class=\\"MuiGrid-item-575 MuiGrid-grid-xs-true-602 Alert-text-1182 alert-text\\"
                      >
                        <b>
-                         Saving - 
+                         Success - 
                        </b>
-                       Claim publication is being processed.
+                       Publication claim has been submitted successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -950,37 +947,41 @@
            />
            <div
              class=\\"MuiGrid-item-575\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-raised-1095 MuiButton-disabled-1101 MuiButton-fullWidth-1106\\"
-               disabled=\\"\\"
-               tabindex=\\"-1\\"
+               class=\\"MuiButtonBase-root-1008 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-raised-1095 MuiButton-fullWidth-1106\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1082\\"
                >
                  Cancel this claim
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1011\\"
+               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-575\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1008 MuiButtonBase-disabled-1009 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-containedPrimary-1093 MuiButton-raised-1095 MuiButton-raisedPrimary-1096 MuiButton-disabled-1101 MuiButton-fullWidth-1106\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1008 MuiButton-root-1081 MuiButton-contained-1092 MuiButton-containedPrimary-1093 MuiButton-raised-1095 MuiButton-raisedPrimary-1096 MuiButton-fullWidth-1106\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1082\\"
                >
                  Claim this work
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1011\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;
